--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <body>
-    <a href:"./task1.html"> This is the first project </a>
-    <a href:"./task2.html"> This is the second project </a>
+    <a href="./task1.html"> This is the first project </a>
+    <a href="./task2.html"> This is the second project </a>
   </body>
   
 </html>
